Getting notes from array now works, also fixed overflow for note list.

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,8 @@ h1, h2, h3 {
     grid-area: sidebar;
     margin: 4px;
     border-radius: 10px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .sidebar li {
